@@ -10,6 +10,8 @@ Version 1.4.22 - SVN
   - Fixed system lock-ups caused by a combination of certain rare,
     malformed message headers and buggy versions of PHP mbstring
     (#3053349).
+  - Now allow multiple plugins to handle (add links for) a single
+    attachment MIME type.
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
